[tool.isort]
profile = "black"

[tool.poetry]
name = "daily interview pro"
version = "0.1.0"
description = "Solved problems from Daily Interview Pro mailing list"
authors = ["Rafael Oliveira"]
license = "The Unlicensed"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
commitizen = "^3.7.0"
black = "^23.7.0"
isort = "^5.12.0"
pylama = {extras = ["mypy"], version = "^8.4.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
